--- a/MilkTeaShop/API.MilkteaAdmin/Web.config
+++ b/MilkTeaShop/API.MilkteaAdmin/Web.config
@@ -65,4 +65,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="MilkteaCnn1" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MilkteaShop;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
