--- a/MilkTeaShop/API.MilkteaAdmin/packages.config
+++ b/MilkTeaShop/API.MilkteaAdmin/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
@@ -15,5 +16,6 @@
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
