--- a/MilkTeaShop/API.MilkteaAdmin/Web.config
+++ b/MilkTeaShop/API.MilkteaAdmin/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <appSettings></appSettings>
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
@@ -66,6 +67,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MilkteaCnn1" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MilkteaShop;Integrated Security=True"/>
+    <add name="MilkteaCnn" providerName="System.Data.SqlClient" connectionString="Server=tcp:api-milktea.database.windows.net,1433;Initial Catalog=milkteaDB;Persist Security Info=False;User ID=duongph;Password=Hayhoichua1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add name="MilkteaCnn1" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MilkteaShop;Integrated Security=True" />
   </connectionStrings>
 </configuration>
