--- a/MilkTeaShop/API.MilkteaAdmin/packages.config
+++ b/MilkTeaShop/API.MilkteaAdmin/packages.config
@@ -8,12 +8,17 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.3" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net461" />
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
