--- a/MilkTeaShop/Service.Business/Service.Business.csproj
+++ b/MilkTeaShop/Service.Business/Service.Business.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Business\BaseService.cs" />
     <Compile Include="Business\ProductService.cs" />
     <Compile Include="Business\ProductVariantService.cs" />
+    <Compile Include="Pagination\PaginationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
