--- a/MilkTeaShop/API.MilkteaAdmin/API.MilkteaAdmin.csproj
+++ b/MilkTeaShop/API.MilkteaAdmin/API.MilkteaAdmin.csproj
@@ -143,6 +143,7 @@
     <Compile Include="App_Start\Ninject.Web.Common.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ConstantManager\ConstantDataManager.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ProductVariantsController.cs" />
