--- a/MilkTeaShop/API.MilkteaAdmin/Web.config
+++ b/MilkTeaShop/API.MilkteaAdmin/Web.config
@@ -45,6 +45,10 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -60,9 +64,19 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <add name="MilkteaCnn" providerName="System.Data.SqlClient" connectionString="Server=tcp:api-milktea.database.windows.net,1433;Initial Catalog=milkteaDB;Persist Security Info=False;User ID=duongph;Password=Hayhoichua1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     <add name="MilkteaCnn1" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MilkteaShop;Integrated Security=True" />
   </connectionStrings>
 <system.webServer>
+  <httpProtocol>
+    <customHeaders>
+      <remove name="X-Powered-By" />
+      <add name="Accept" value="application/json" />
+      <add name="Access-Control-Allow-Headers" value="X-Requested-With, Content-Type, Origin, Authorization, Accept, Client-Security-Token, Accept-Encoding" />
+      <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+      <add name="X-Powered-By" value="*" />
+    </customHeaders>
+  </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
