--- a/MilkTeaShop/API.MilkteaAdmin/Web.config
+++ b/MilkTeaShop/API.MilkteaAdmin/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="siteName" value="https://api-milktea-admin.azurewebsites.net"/>
+  </appSettings>
   <system.web>
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6.1" />
@@ -64,6 +66,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <add name="MilkteaCnn" providerName="System.Data.SqlClient" connectionString="Server=tcp:api-milktea.database.windows.net,1433;Initial Catalog=milkteaDB;Persist Security Info=False;User ID=duongph;Password=Hayhoichua1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     <add name="MilkteaCnn1" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MilkteaShop;Integrated Security=True" />
   </connectionStrings>
 <system.webServer>
