--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,4 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 MilkTeaShop/API.MilkteaAdmin/Web.config
+MilkTeaShop/API.MilkteaAdmin/Web.config
