--- a/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
+++ b/MilkTeaShop/Infrastructure.Entity/Infrastructure.Entity.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\201807040621281_duong_04072018_1.Designer.cs">
       <DependentUpon>201807040621281_duong_04072018_1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807051007013_duong_05072018.cs" />
+    <Compile Include="Migrations\201807051007013_duong_05072018.Designer.cs">
+      <DependentUpon>201807051007013_duong_05072018.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -93,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807040621281_duong_04072018_1.resx">
       <DependentUpon>201807040621281_duong_04072018_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807051007013_duong_05072018.resx">
+      <DependentUpon>201807051007013_duong_05072018.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
