--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,6 @@ ASALocalRun/
 .mfractor/
 MilkTeaShop/API.MilkteaAdmin/Web.config
 MilkTeaShop/API.MilkteaAdmin/Web.config
+/MilkTeaShop/Infrastructure.Identity/Migrations/201807090808242_duong_09072018.cs
+/MilkTeaShop/Infrastructure.Identity/Migrations/201807090808242_duong_09072018.Designer.cs
+/MilkTeaShop/Infrastructure.Identity/Migrations/201807090808242_duong_09072018.resx
