--- a/MilkTeaShop/Infrastructure.Identity/Infrastructure.Identity.csproj
+++ b/MilkTeaShop/Infrastructure.Identity/Infrastructure.Identity.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +60,10 @@
     <Compile Include="Migrations\201807040728190_duong_04072018.cs" />
     <Compile Include="Migrations\201807040728190_duong_04072018.Designer.cs">
       <DependentUpon>201807040728190_duong_04072018.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807090808242_duong_09072018.cs" />
+    <Compile Include="Migrations\201807090808242_duong_09072018.Designer.cs">
+      <DependentUpon>201807090808242_duong_09072018.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Account.cs" />
@@ -84,6 +89,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201807040728190_duong_04072018.resx">
       <DependentUpon>201807040728190_duong_04072018.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807090808242_duong_09072018.resx">
+      <DependentUpon>201807090808242_duong_09072018.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
